--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
   "description": "",
   "dependencies": {
     "@tailwindcss/vite": "^4.1.8",
+    "axios": "^1.9.0",
     "boltlabs": "file:",
     "lucide-react": "^0.512.0",
     "react": "^19.1.0",
