--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-MONGODB_URI=mongodb+srv://Nandini:nan123@contactTab.cegyoqg.mongodb.net/contactDB?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://<your-username>:<your-password>@cluster0.mongodb.net/<your-db>?retryWrites=true&w=majority
 
 PORT=3000
 EMAIL_USER=your-email@gmail.com
