--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,4 @@
-MONGO_URI=mongodb+srv://<your-username>:<your-password>@cluster0.mongodb.net/<your-db>?retryWrites=true&w=majority
 PORT=5000
+CLIENT_URL=http://localhost:3000
+SUPABASE_URL=https://xyzcompany.supabase.co 
+SUPABASE_SERVICE_ROLE_KEY=your-service-role-key
