--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,13 +15,14 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.8",
     "axios": "^1.9.0",
-    "lucide-react": "^0.512.0",
     "framer-motion": "^12.15.0",
+    "lucide-react": "^0.512.0",
     "pg": "^8.16.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.6.1"
+    "react-router-dom": "^7.6.1",
+    "swiper": "^11.2.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
