--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,9 +13,10 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@heroicons/react": "^1.0.6",
     "@tailwindcss/vite": "^4.1.8",
     "axios": "^1.9.0",
-    "framer-motion": "^12.15.0",
+    "framer-motion": "^12.19.1",
     "lucide-react": "^0.512.0",
     "pg": "^8.16.0",
     "react": "^19.1.0",
