--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,29 +13,28 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@tailwindcss/vite": "^4.1.8",
+    "@heroicons/react": "^2.2.0",
     "axios": "^1.9.0",
-    "framer-motion": "^12.15.0",
-    "lucide-react": "^0.512.0",
-    "pg": "^8.16.0",
+    "framer-motion": "^12.19.1",
+    "lucide-react": "^0.523.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.6.1",
+    "react-router-dom": "^7.6.2",
     "swiper": "^11.2.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
-    "@tailwindcss/postcss": "^4.1.8",
-    "@vitejs/plugin-react": "^4.4.1",
+    "@tailwindcss/postcss": "^4.1.10",
+    "@vitejs/plugin-react": "^4.6.0",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.25.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
-    "postcss": "^8.5.4",
+    "postcss": "^8.5.6",
     "tailwindcss": "^4.1.8",
-    "vite": "^6.3.5"
+    "vite": "^7.0.0"
   },
   "browserslist": {
     "production": [
