--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,9 @@
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
+  "prisma": {
+    "seed": "node prisma/seed.js"
+  },
   "dependencies": {
     "@prisma/client": "^6.9.0",
     "bcryptjs": "^3.0.2",
@@ -19,7 +22,10 @@
     "nodemailer": "^7.0.3"
   },
   "devDependencies": {
+    "@types/node": "^24.0.13",
     "nodemon": "^3.0.2",
-    "prisma": "^6.9.0"
+    "prisma": "^6.9.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3"
   }
 }
