--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "author": "",
   "license": "ISC",
   "type": "commonjs",
-   "dependencies": {
+  "dependencies": {
     "express": "^5.1.0",
     "nodemailer": "^7.0.5",
     "slugify": "^1.6.6"
+  },
+  "devDependencies": {
+    "prisma": "^6.13.0"
   }
 }
-
